--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -12,14 +12,7 @@
 * {
     padding: 0;
     margin: 0;
+    border: 0;
+    font-family: "Roboto", sans-serif;
 }
 
-
-.roboto-text {
-  font-family: "Roboto", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 400;
-  font-style: normal;
-  font-variation-settings:
-    "wdth" 100;
-}
