--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -95,3 +95,40 @@
     height: 300px;
     width: 450px;
 }
+
+/* image collection */
+
+.content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.content h1 {
+    font-size: 36px;
+    font-weight: 900px;
+}
+
+.image-collection {
+    display: flex;
+    justify-content: space-evenly;
+    gap: 60px;
+}
+
+.image-content {
+    display: flex;
+    flex-direction: column;
+    border: 1px solid red;
+    width: 150px;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.image-content img {
+    height: 150px;
+    width: 150px;
+    border: 5px solid var(--skyblue);
+    border-radius: 5px;
+}
