--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -6,6 +6,7 @@
     --skyblue: #3882f6;
     --light: #E5E7EB;
     --clear: #F9FAF8;
+    --white: #FFFFFF
 
     /* text*/
     --header-text: 24px;
@@ -103,11 +104,14 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background: var(--white);
+    padding-bottom: 100px;
 }
 
 .content h1 {
     font-size: 36px;
     font-weight: 900px;
+    margin: 50px;
 }
 
 .image-collection {
@@ -119,7 +123,6 @@
 .image-content {
     display: flex;
     flex-direction: column;
-    border: 1px solid red;
     width: 150px;
     justify-content: center;
     align-items: center;
@@ -131,4 +134,8 @@
     width: 150px;
     border: 5px solid var(--skyblue);
     border-radius: 5px;
+}
+
+.image-content p {
+    padding-top: 5px;
 }
